# wordjogleads

./: MANIFEST.in  README.md  config.yaml  config.yaml.example  prompts.yaml  pyproject.toml  requirements.txt
Architecture/: Architecture.drawio
src/app/: main.py
src/app/api/v1/: dependencies.py  router.py
src/app/api/v1/endpoints/: example.py  leads.py
src/app/core/: __init__.py  config.py  dependencies.py
src/app/database/: __init__.py  connection.py  session.py
src/app/database/models/: __init__.py  database.py
src/app/database/sqls/: 01_create_leads_table.sql  02_insert_sample_leads.sql  03_drop_leads_table.sql  README.md
src/app/models/: __init__.py  base.py  database.py
src/app/repositories/: __init__.py  base_repository.py
src/app/schemas/: __init__.py  base.py  leads.py  twenty_crm.py
src/app/services/: __init__.py  base_service.py  email_service.py  lead_service.py  llm_service.py
src/app/utils/: __init__.py  exceptions.py  helpers.py  logging.py  logging_example.py  prompt_manager.py
